[package]
name = "{{project-name}}"
# name = "numbers-template"
version = "0.1.0"
authors = ["tekjar <raviteja@bytebeam.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prost = "0.6"
pprof = { version = "0.3", features = ["flamegraph", "protobuf"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3"
